--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.28.1",
+    "react-social-media-embed": "^2.2.2",
     "serve": "^13.0.2",
     "slick-carousel": "^1.8.1",
     "stream": "^0.0.2",
